# wbc_ros

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  README.md  README_8md.html  annotated.html  biped__controller_8cpp.html  biped__controller_8hpp.html  biped__controller_8hpp_source.html  cartesian__force__controller__node_8cpp.html  cartesian__force__controller__node_8hpp.html  cartesian__force__controller__node_8hpp_source.html  cartesian__pose__publisher_8cpp.html  cartesian__position__controller_8cpp.html  cartesian__position__controller__node_8cpp.html  cartesian__position__controller__node_8hpp.html  cartesian__position__controller__node_8hpp_source.html  cartesian__radial__potential__fields__node_8cpp.html  cartesian__radial__potential__fields__node_8hpp.html  cartesian__radial__potential__fields__node_8hpp_source.html  cartesian__trajectory__publisher_8cpp.html  classCartesianPosePublisher-members.html  classCartesianPosePublisher.html  classCartesianTrajectoryPublisher-members.html  classCartesianTrajectoryPublisher.html  classJointStateConverter-members.html  classJointStateConverter.html  classJointTrajectoryPublisher-members.html  classJointTrajectoryPublisher.html  classes.html  classwbc__ros_1_1BipedController-members.html  classwbc__ros_1_1BipedController.html  classwbc__ros_1_1CartesianForceControllerNode-members.html  classwbc__ros_1_1CartesianForceControllerNode.html  classwbc__ros_1_1CartesianPositionControllerNode-members.html  classwbc__ros_1_1CartesianPositionControllerNode.html  classwbc__ros_1_1CartesianRadialPotentialFieldsNode-members.html  classwbc__ros_1_1CartesianRadialPotentialFieldsNode.html  (+65 more)
.github/workflows/: build_and_test_ubuntu22.04.yml  build_and_test_ubuntu24.04.yml  doxygen.yml
config/: collision_avoidance.yml  contact_force.yml  default.rviz  iiwa_controllers.yaml  joint_limits.yml  joint_position.yml  joints.yml  left_arm.yml  right_arm.yml  wbc.yml
config/biped_example/: default.rviz  mock_hardware_interface.yaml  pose_publisher_foot_l.yml  pose_publisher_foot_r.yml  trajectory_publisher_foot_l.yaml  trajectory_publisher_foot_r.yaml  trajectory_publisher_joint.yaml  whole_body_controller.yaml
config/cartesian_space_dynamic_example/: iiwa_controllers.yaml  trajectory_publisher.yaml  whole_body_controller.yaml
config/cartesian_space_example/: cartesian_position_controller.yaml  ee_pose_controller.yml  ee_pose_trajectory.yml  iiwa_controllers.yaml  ros2_controllers.yaml  trajectory_publisher.yml  wbc.yml  whole_body_controller.yaml
config/joint_space_dynamic_example/: trajectory_publisher.yaml  whole_body_controller.yaml
config/joint_space_example/: iiwa_controllers.yaml  joint_position_controller.yml  trajectory_publisher.yml  wbc.yml  whole_body_controller.yaml
config/null_space_example/: iiwa_controllers.yaml  pose_publisher.yml  trajectory_publisher.yml
config/performance_test/: iiwa_controllers.yaml  trajectory_publisher.yml
config/quadruped_example/: go2_controllers.yaml
config/single_arm_example/: default.rviz  mock_hardware_interface.yaml  trajectory_publisher.yaml  whole_body_controller.yaml
doc/parameters/: whole_body_controller_parameters.md
docker/: Dockerfile
include/wbc_ros/: biped_controller.hpp  cartesian_position_controller.hpp  com_position_controller.hpp  contacts_interface.hpp  conversions.hpp  joint_position_controller.hpp  mock_hardware_interface.hpp  single_arm_controller.hpp  task_interface.hpp  whole_body_controller.hpp
launch/: biped_example.launch.py  cartesian_space_dynamic_example.launch.py  cartesian_space_example.launch.py  cartesian_space_example.py  hyper2.launch.py  joint_space_dynamic_example.launch.py  joint_space_example.launch.py  joint_space_example.py  null_space_example.launch.py  performance_test.launch.py  quadruped_example.launch.py  robot_model_config.yml  ros2_control.launch.py  single_arm_example.launch.py  single_arm_example.py  test.launch  test_wbc.launch.xml  wbc_config.yml
models/urdf/: iiwa.config.xacro  iiwa.r2c_hardware.xacro  initial_positions.yaml  kuka_iiwa.urdf  kuka_iiwa.urdf.xacro
msg/: RadialPotentialField.msg  RadialPotentialFieldVector.msg  RigidBodyState.msg  TaskConfig.msg  TaskStatus.msg
nodes/: conversions.cpp  conversions.hpp  loop_back_driver_node.cpp  loop_back_driver_node.hpp  wbc_node.cpp  wbc_node.hpp
nodes/controllers/: cartesian_force_controller_node.cpp  cartesian_force_controller_node.hpp  cartesian_position_controller_node.cpp  cartesian_position_controller_node.hpp  cartesian_radial_potential_fields_node.cpp  cartesian_radial_potential_fields_node.hpp  controller_node.hpp  joint_limit_avoidance_node.cpp  joint_limit_avoidance_node.hpp  joint_position_controller_node.cpp  joint_position_controller_node.hpp
src/: biped_controller.cpp  biped_controller_parameters.yaml  cartesian_position_controller.cpp  cartesian_position_controller_parameters.yaml  com_position_controller.cpp  com_position_controller_parameters.yaml  contacts_interface.cpp  conversions.cpp  conversions.hpp  joint_position_controller.cpp  joint_position_controller_parameters.yaml  loop_back_driver_node.cpp  loop_back_driver_node.hpp  mock_hardware_interface.cpp  single_arm_controller.cpp  single_arm_controller_parameters.yaml  task_interface.cpp  wbc_node.cpp  wbc_node.hpp  whole_body_controller.cpp  whole_body_controller_parameters.yaml
src/controllers/: cartesian_force_controller_node.cpp  cartesian_force_controller_node.hpp  cartesian_position_controller_node.cpp  cartesian_position_controller_node.hpp  cartesian_radial_potential_fields_node.cpp  cartesian_radial_potential_fields_node.hpp  controller_node.cpp  controller_node.hpp  joint_limit_avoidance_node.cpp  joint_limit_avoidance_node.hpp  joint_position_controller_node.cpp  (+1 more)
test/: complex_launch.test.py  default.rviz  initial_joint_state.yml  kuka_iiwa.urdf  robot_model_config.yml  send_test_pose.sh  simple_launch.test.py  solver_output.test.py  test.launch  test_wbc.cpp  test_wbc.hpp  test_wbc.launch.xml  test_wbc.test  topics.test.py  wbc.yml  wbc_config.yml
test/config/: joints.yml  (+15 more)
(+19 files in other folders)
