<?xml version="1.0"?>
<package format="3">
  <name>wbc_ros</name>
  <version>0.1.0</version>
  <description>ROS interface for wbc library</description>

  <maintainer email="dennis.mronga@dfki.de">Dennis Mronga</maintainer>
  <license>BSD-3</license>
  <url type="https://arc-opt.github.io/Documentation"></url>
  <author email="dennis.mronga@dfki.de">Dennis Mronga</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>

  <exec_depend>pluginlib</exec_depend>
  
  <depend>wbc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
