<?xml version="1.0"?>
<package format="3">
  <name>wbc_ros</name>
  <version>0.1.0</version>
  <description>ROS interface for wbc library</description>

  <maintainer email="dennis.mronga@dfki.de">Dennis Mronga</maintainer>
  <license>BSD-3</license>
  <url type="https://arc-opt.github.io/Documentation"></url>
  <author email="dennis.mronga@dfki.de">Dennis Mronga</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>generate_parameter_library</depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
